Add company logo + new icons

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="alternate icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="light icon" href="%PUBLIC_URL%/light_favicon.ico" /> -->
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/light_favicon.ico"
+      id="dark-scheme-icon"
+    />
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/dark_favicon.ico"
+      id="light-scheme-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="Timothée Couble" content="Course of life - Timothée Couble" />
@@ -13,7 +23,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="http://fonts.googleapis.com/css?family=Montserrat:light"
+      href="//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800"
       rel="stylesheet"
       type="text/css"
     />
