--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <!-- <link rel="light icon" href="%PUBLIC_URL%/light_favicon.ico" /> -->
     <link
       rel="icon"
-      href="%PUBLIC_URL%/light-favicon.ico"
+      href="%PUBLIC_URL%/raccoon.ico"
       id="dark-scheme-icon"
     />
     <link
       rel="icon"
-      href="%PUBLIC_URL%/dark-favicon.ico"
+      href="%PUBLIC_URL%/raccoon.ico"
       id="light-scheme-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
