Add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H63PKQ4HKT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-H63PKQ4HKT');
+    </script>
     <meta charset="utf-8" />
     <!-- <link rel="light icon" href="%PUBLIC_URL%/light_favicon.ico" /> -->
     <link
